--- a/sites/all/themes/newhopeks/less/template.less
+++ b/sites/all/themes/newhopeks/less/template.less
@@ -322,7 +322,7 @@
 		height: auto;
 
 		@media (min-width: @screen-sm) {
-		    width: auto;
+		    max-width: 100%;
 		}
 
 	}
